--- a/src/pages/signup/style.scss
+++ b/src/pages/signup/style.scss
@@ -5,9 +5,29 @@
   height: 100%;
   min-height: 100vh;
   overflow: hidden;
+  @include flex-box();
+
+  .description-container {
+    margin-inline-start: 100px;
+    color: #fff;
+    width: 500px;
+    @include flex-box(flex-start, center, column);
+
+    .description-title {
+      font-size: 3em;
+      font-weight: bolder;
+      margin-bottom: 30px;
+    }
+
+    .description {
+      font-size: 1em;
+      width: 100%;
+    }
+  }
 
   .form-container {
-    width: 450px;
+    margin-inline-start: 100px;
+    width: 500px;
     .premium-box {
       background-color: $blue;
       padding: 15px 60px;
@@ -15,6 +35,8 @@
       color: #fff;
       box-shadow: 0 7px 0 0 rgba(104, 102, 102, 0.5);
       margin: 20px 0;
+      text-align: center;
+      font-size: 0.9em;
     }
     .form {
       padding: 25px 30px;
@@ -26,11 +48,13 @@
 
         input {
           margin: 10px 0;
-          padding: 15px 10px;
+          padding: 20px 25px;
           width: 100%;
           border-radius: 5px;
           outline: 0;
           border: 1px solid #ddd;
+          font-weight: bold;
+          color: #444;
 
           &:focus {
             border: 1px solid $dark-blue;
@@ -48,14 +72,23 @@
           color: #fff;
           font-weight: bold;
           box-shadow: 0 5px 0 0 rgba(2, 109, 2, 0.5);
-          margin-bottom: 20px;
+          margin: 12px 0;
+          font-size: 0.9em;
+          cursor: pointer;
+          transition: all 0.3s ease-in-out;
+
+          &:hover {
+            background-color: hsl(154, 58%, 64%);
+          }
         }
       }
       p {
         color: $grayish-blue;
         font-weight: bold;
-        font-size: 11px;
+        font-size: 0.6em;
         text-align: center;
+        margin-top: 10px;
+        margin-bottom: 12px;
         a {
           text-decoration: none;
           color: $red;
