--- a/src/pages/signup/style.scss
+++ b/src/pages/signup/style.scss
@@ -14,6 +14,7 @@
     @include flex-box(flex-start, center, column);
 
     .description-title {
+      color: #fff;
       font-size: 3em;
       font-weight: bolder;
       margin-bottom: 30px;
@@ -45,25 +46,27 @@
       border-radius: 10px;
       form {
         @include flex-box(center, center, column);
-
-        input {
-          margin: 10px 0;
-          padding: 20px 25px;
+        .ant-form-item {
           width: 100%;
-          border-radius: 5px;
-          outline: 0;
-          border: 1px solid #ddd;
-          font-weight: bold;
-          color: #444;
-
-          &:focus {
-            border: 1px solid $dark-blue;
-          }
-          &::placeholder {
+          input {
+            margin: 10px 0;
+            border: 1px solid #ddd;
+            padding: 20px 25px;
+            width: 100%;
+            border-radius: 5px;
+            outline: 0;
             font-weight: bold;
+            color: #444;
+
+            &:focus {
+              border: 1px solid $dark-blue;
+            }
+            &::placeholder {
+              font-weight: bold;
+            }
           }
         }
-        button {
+        .submit-button {
           width: 100%;
           background-color: $green;
           border: 0;
@@ -76,6 +79,7 @@
           font-size: 0.9em;
           cursor: pointer;
           transition: all 0.3s ease-in-out;
+          height: auto;
 
           &:hover {
             background-color: hsl(154, 58%, 64%);
