--- a/src/pages/signup/style.scss
+++ b/src/pages/signup/style.scss
@@ -31,13 +31,16 @@
     width: 500px;
     .premium-box {
       background-color: $blue;
-      padding: 15px 60px;
+      padding: 20px 60px;
       border-radius: 10px;
       color: #fff;
       box-shadow: 0 7px 0 0 rgba(104, 102, 102, 0.5);
       margin: 20px 0;
       text-align: center;
       font-size: 0.9em;
+      p {
+        margin-bottom: 0;
+      }
     }
     .form {
       padding: 25px 30px;
@@ -48,10 +51,11 @@
         @include flex-box(center, center, column);
         .ant-form-item {
           width: 100%;
+          margin: 10px 0;
+          text-align: right;
           input {
-            margin: 10px 0;
             border: 1px solid #ddd;
-            padding: 20px 25px;
+            padding: 12px 25px;
             width: 100%;
             border-radius: 5px;
             outline: 0;
@@ -62,6 +66,7 @@
               border: 1px solid $dark-blue;
             }
             &::placeholder {
+              color: #777;
               font-weight: bold;
             }
           }
@@ -100,5 +105,8 @@
         }
       }
     }
+  }
+  .validation {
+    color: $red;
   }
 }
