--- a/src/pages/signup/style.scss
+++ b/src/pages/signup/style.scss
@@ -5,7 +5,7 @@
   height: 100%;
   min-height: 100vh;
   overflow: hidden;
-  @include flex-box(center, center);
+  @include flex-box(space-evenly, center);
 
   .description-container {
     color: #fff;
@@ -13,7 +13,7 @@
       color: #fff;
       font-size: 3em;
       font-weight: bolder;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
     }
     .description {
       font-size: 1em;
@@ -21,9 +21,10 @@
   }
 
   .form-container {
+    min-width: 450px;
     .premium-box {
       background-color: $blue;
-      padding: 20px 60px;
+      padding: 17px 60px;
       border-radius: 10px;
       color: #fff;
       box-shadow: 0 7px 0 0 rgba(104, 102, 102, 0.5);
@@ -89,7 +90,6 @@
         font-size: 0.6em;
         text-align: center;
         margin-top: 10px;
-        margin-bottom: 12px;
         a {
           text-decoration: none;
           color: $red;
@@ -122,6 +122,7 @@
     }
     .form-container {
       padding: 1em;
+      min-width: unset !important;
     }
   }
 }
